@@ -5,7 +5,8 @@ CHANGES
 
 3.6.1dev (unreleased)
 ---------------------
-
+- Bug: Error thrown during __setitem__ for an ordered container leaves
+  bad key in order
 - fixed #238579 / #163149: error with unicode traversing
 - fixed #221025 : adding menu is sorted with translated item
                   by using a collator (better localized sorting)
